After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691177 - Brightness slider not updated when using keyboard shortcuts
Brightness slider not updated when using keyboard shortcuts
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Power
git master
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-05 11:00 UTC by Cosimo Cecchi
Modified: 2013-01-05 22:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Cosimo Cecchi 2013-01-05 11:00:27 UTC
- open the Power panel
- change the brightness with the keyboard shortcut
- the slider doesn't change position. It will change position if I exit and re-enter the panel though.