power: Construct the gsd proxies properly

The code was not using the correct bus name for the screen proxy.
https://bugzilla.gnome.org/show_bug.cgi?id=691177