panels/power/cc-power-panel.c
@@ -1915,7 +1915,7 @@ cc_power_panel_init (CcPowerPanel *self)
   g_dbus_proxy_new_for_bus (G_BUS_TYPE_SESSION,
                             G_DBUS_PROXY_FLAGS_NONE,
                             NULL,
-                            "org.gnome.SettingsDaemon",
+                            "org.gnome.SettingsDaemon.Power",
                             "/org/gnome/SettingsDaemon/Power",
                             "org.gnome.SettingsDaemon.Power.Screen",
                             priv->cancellable,
